@@ -120,17 +120,39 @@ of the file it 11288 and it has "bin/rdup" as a path.
 Directories are always printed, as the modification time of directories
 is not compared.
 
-.SH OUTPUT FORMAT WITH \-C
+.SH OUTPUT FORMAT WITH \-c
 The output generated by \fBrdup -c\fR is formatted like:
         +|-MODE UID GID PATH_SIZE FILE_SIZE PATH FILE_CONTENTS
 .PP
+This makes it possible possible for a remote shell script to receive the
+actual file and make a backup.
+.PP
 All field are identical as described in \fBOUTPUT FORMAT\fR, but
-there is one extra field:
+there is one extra field and the following cavaets.
 .TP
 .B o FILE_CONTENTS
-The entire file is concatenated to standard output. This makes it
-possible for a remote shell script to receive the actual file and
-making a backup.
+The entire file is concatenated to standard output.
+
+.SS CAVAETS
+The output when using the \-c is changed as follows, for:
+.TP
+.B o directories:
+the FILE_SIZE is set to zero and no content is printed. Thus:
+        +16877 1000 1000 11 0 \fB/home/miekg\fR
+.TP
+.B o regular files:
+the FILE_SIZE is used as-is and the entire file contents
+is printed to standard output. Thus:
+        +33152 1000 1000 32 6 \fB/home/miekg/svn/rdup/trunk/aaa/a\fR\fIhello\fR
+
+Where \fBaaa/a\fR is a regular file containing the word 'hello\\n'
+.TP
+.B o symbolic links:
+the FILE_SIZE is set to the size of the target name and instead
+of printing the file contents the target name is printed. Thus:
+        +41471 1000 1000 34 1 \fB/home/miekg/svn/rdup/trunk/aaa/def\fR\fIb\fR
+
+Where \fBaaa/def\fR is a symbolic link that points to 'b'
 
 .SH SCRIPTS
 Various shells scripts are included with rdup. These script actually
