@@ -59,20 +59,73 @@ signal_abort(int signal)
  */
 static void
 entry_print(FILE *fp, char plusmin, struct entry *e) {
-	fprintf(fp, "%c%d %d %d %ld %ld %s",
-			plusmin,
-			(int) e->f_mode,
-			(int) e->f_uid,
-			(int) e->f_gid,
-			e->f_name_size,
-			e->f_size,
-			e->f_name);
-	if (opt_contents == 1) {
-		if (! cat(fp, e->f_name)) {
-			exit(EXIT_FAILURE);
+	switch(opt_contents) {
+		case 0:
+		fprintf(fp, "%c%d %d %d %ld %ld %s",
+				plusmin,
+				(int) e->f_mode,
+				(int) e->f_uid,
+				(int) e->f_gid,
+				e->f_name_size,
+				e->f_size,
+				e->f_name);
+		break;
+		case 1:
+		/* do some magic here:
+		 * directories -> size to 0 no content
+		 * files -> normal size + content
+		 * links -> size target path len + target path
+		 */
+		if (S_ISDIR(e->f_mode)) {
+			fprintf(fp, "%c%d %d %d %ld %d %s",
+					plusmin,
+					(int) e->f_mode,
+					(int) e->f_uid,
+					(int) e->f_gid,
+					e->f_name_size,
+					0,
+					e->f_name);
+			break;
 		}
+		if (S_ISREG(e->f_mode)) {
+			fprintf(fp, "%c%d %d %d %ld %ld %s",
+					plusmin,
+					(int) e->f_mode,
+					(int) e->f_uid,
+					(int) e->f_gid,
+					e->f_name_size,
+					e->f_size,
+					e->f_name);
+			if (! cat(fp, e->f_name)) {
+				exit(EXIT_FAILURE);
+			}
+			break;
+		}
+		if (S_ISLNK(e->f_mode)) {
+			char buf[BUFSIZE + 1];
+			size_t i;
+			if ((i = readlink(e->f_name, buf, BUFSIZE)) == -1) {
+				fprintf(stderr, "** Error reading link: %s\n", e->f_name);
+				exit(EXIT_FAILURE);
+			}
+			buf[i + 1] = '\0';
+
+			fprintf(fp, "%c%d %d %d %ld %ld %s%s",
+					plusmin,
+					(int) e->f_mode,
+					(int) e->f_uid,
+					(int) e->f_gid,
+					e->f_name_size,
+					i,
+					e->f_name,
+					buf);
+			break;
+		}
+
 	}
 }
+
+
 
 /**
  * free a struct entry
